# grocer-app-backend

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  package.json  pyproject.toml  pyrightconfig.json
apps/categories/: models.py
apps/health/: urls.py  views.py
apps/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py
apps/items/: models.py
apps/stores/: models.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py
docker/: entrypoint.sh
modules/products/: models.py
nginx/prod/: default.conf
