[tool.poetry]
name = "grocer-app-backend"
version = "0.1.0"
description = "Django/DRF backend for grocery store operations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
celery = "^5.3.6"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 